tenants/platform/kratix/base/configs/workload/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kratix-workloads
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
